--- a/app/src/main/res/layout/gatt_services_characteristics.xml
+++ b/app/src/main/res/layout/gatt_services_characteristics.xml
@@ -10,4 +10,11 @@
         android:text=""
         android:id="@+id/weight"
         android:layout_gravity="center_horizontal"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Re-scan"
+        android:id="@+id/rescan"
+        android:layout_gravity="center_horizontal"/>
 </LinearLayout>
